<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stars"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="411dp"
        android:layout_height="172dp"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="0dp"
        android:paddingTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo_white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="37dp" />

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="410dp"
        android:layout_height="124dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        android:paddingStart="60dp"
        android:paddingTop="40dp"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        android:paddingLeft="60dp" />
    <android.widget.Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:background="@drawable/button_design_round"
        app:layout_constraintTop_toBottomOf="@id/text_welcome"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp" />

    <android.widget.Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_design_round"
        android:paddingTop="5dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp"/>
    <android.widget.Button
        android:id="@+id/button_try"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_design_round"
        android:paddingTop="5dp"
        android:text="try"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/button_register"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp"
        android:onClick="getData"/>

</androidx.constraintlayout.widget.ConstraintLayout>