<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/stars"
    android:layout_height="match_parent"
    tools:context=".GetLocationActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:gravity="top"
        android:paddingLeft="10dp"
        android:paddingRight="15dp"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:paddingHorizontal="0dp"
            android:paddingTop="25dp"
            android:src="@drawable/logo_white"
            tools:ignore="MissingConstraints"
            />
        <TextView
            android:id="@+id/text_header"
            android:layout_width="wrap_content"
            android:layout_height="124dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingTop="40dp"
            android:text="@string/about_header"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />
    </LinearLayout>

    <!--<TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="195dp" />-->

    <android.widget.Button
        android:id="@+id/button_refresh"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="Refresh"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:background="@drawable/button_design_round"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp"
        android:onClick="getData"/>

<fragment
    android:layout_width="match_parent"
    android:layout_height="380dp"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:id="@+id/mapview"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:apiKey="@string/API_KEY"


    tools:context="example.javatpoint.com.kotlingooglemap.MapsActivity"
    />
    <!--<androidx.viewpager.widget.ViewPager
        android:id="@+id/dashViewPagerId"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        tools:ignore="MissingConstraints">->
    </androidx.viewpager.widget.ViewPager>
   <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:apiKey="@string/api_map_key"
        android:clickable="true"
        android:enabled="true"
        />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <android.widget.Button
            android:id="@+id/button_save"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="15dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:background="@drawable/button_design_round"

            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp" />
        <android.widget.Button
            android:id="@+id/button_back"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="15dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:background="@drawable/button_design_round"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp" />

    </LinearLayout>
   <!-- <android.widget.Button
        android:id="@+id/button_show_map"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="Show map"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:background="@drawable/button_design_round"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp" />-->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
