<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/stars"
    tools:context=".SavedLocationsActivity">
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:gravity="top"
        android:paddingLeft="10dp"
        android:paddingRight="15dp"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:paddingHorizontal="0dp"
            android:paddingTop="25dp"
            android:src="@drawable/logo_white"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="37dp" />
        <TextView
            android:id="@+id/text_header"
            android:layout_width="410dp"
            android:layout_height="124dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingTop="40dp"
            android:text="@string/saved_header"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear"
        tools:ignore="MissingConstraints"

        android:fadingEdge="horizontal"
        android:fadingEdgeLength="120dp"
        android:fillViewport="false"
        android:requiresFadingEdge="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/recycler_view">


        <android.widget.Button
            android:id="@+id/button_save"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="15dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:background="@drawable/button_design_round"

            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp" />
        <android.widget.Button
            android:id="@+id/button_back"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="15dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:background="@drawable/button_design_round"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>